Modify the header of index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- HEADER -->
     <div id="header" class="outer">
     	<div id="header_banner" class="inner">
-    		<table border="1">
+    		<table style="text-align:center">
     			<tr>
     				<td>本土炸鸡知名品牌</td>
     				<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -24,14 +24,14 @@
     		</table>
     	</div>
         <div id="header_bar" class="inner">
-          <table border="1">
+          <table style="text-align:center">
           	<tr>
-          		<td><a href="introduction.html">品牌介绍</a></td>
-          		<td><a href="dynamics.html">品牌动态</a></td>
-          		<td><a href="show.html">产品展示</a></td>
-          		<td><a href="join.html">加盟政策</a></td>
-          		<td><a href="about.html">关于我们</a></td>
-          		<td><a href="contact.html">联系我们</a></td>
+          		<td><a href="introduction.html"><h2>品牌介绍</h2></a></td>
+          		<td><a href="dynamics.html"><h2>品牌动态</h2></a></td>
+          		<td><a href="show.html"><h2>产品展示</a></h2></td>
+          		<td><a href="join.html"><h2>加盟政策</a></h2></td>
+          		<td><a href="about.html"><h2>关于我们</a></h2></td>
+          		<td><a href="contact.html"><h2>联系我们</a></h2></td>
           	</tr>
           </table>
         </div>
@@ -87,8 +87,6 @@
 		<h4>加盟电话：400-888-8888</h4>
 		<h4>网址：<a href="www.gongrenlu.com">www.gongrenlu.com</a></h4>
 		<h4>公司地址：郑州市二七区航海中路59号海为科技园A702C</h4>
-        <p class="copyright">Rua maintained by <a href="https://github.com/miruacle">miruacle</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
