Modify the header of index.html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     	<div id="header_banner" class="inner">
     		<table style="text-align:center">
     			<tr>
-    				<td>本土炸鸡知名品牌</td>
-    				<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-    				<td>加盟电话：400-888-8888</td>
+    				<td style="text-align:left">本土炸鸡知名品牌</td>
+    				<td>&nbsp;</td>
+    				<td style="text-align:right">加盟电话：400-888-8888</td>
     			</tr>
     			<tr>
     				<td><img src="images/logo.jpg"></td>
@@ -26,12 +26,12 @@
         <div id="header_bar" class="inner">
           <table style="text-align:center">
           	<tr>
-          		<td><a href="introduction.html"><h2>品牌介绍</h2></a></td>
-          		<td><a href="dynamics.html"><h2>品牌动态</h2></a></td>
-          		<td><a href="show.html"><h2>产品展示</a></h2></td>
-          		<td><a href="join.html"><h2>加盟政策</a></h2></td>
-          		<td><a href="about.html"><h2>关于我们</a></h2></td>
-          		<td><a href="contact.html"><h2>联系我们</a></h2></td>
+          		<td><a href="introduction.html"><h3>品牌介绍</h3></a></td>
+          		<td><a href="dynamics.html"><h3>品牌动态</h3></a></td>
+          		<td><a href="show.html"><h3>产品展示</a></h3></td>
+          		<td><a href="join.html"><h3>加盟政策</a></h3></td>
+          		<td><a href="about.html"><h3>关于我们</a></h3></td>
+          		<td><a href="contact.html"><h3>联系我们</a></h3></td>
           	</tr>
           </table>
         </div>
