--- a/index.html
+++ b/index.html
@@ -7,33 +7,30 @@
 </head>
 <body>
 
-	<!-- HEADER -->
-    <div id="header" class="outer">
-    	<div id="header_banner" class="inner">
-    		<table style="text-align:center">
+	<!-- HEADER -->   
+    <div id="header" class="outer">   		   		
+    	<p id="header_words">本土炸鸡知名品牌</p>
+    	<p id="header_tel">加盟电话：400-888-8888</p>
+    </div>
+    
+    <div id="logo_wrap" class="outer">
+    	<div id="header_logo" class="inner">
+    		<table>
     			<tr>
-    				<td style="text-align:left">本土炸鸡知名品牌</td>
-    				<td>&nbsp;</td>
-    				<td style="text-align:right">加盟电话：400-888-8888</td>
-    			</tr>
-    			<tr>
-    				<td><img src="images/logo.jpg"></td>
-    				<td><h3 id="project_title">专注本土传统炸鸡二十四年，始终如一</h3></td>
-    				<td><h3>加盟电话：400-888-8888</h3></td>
+    				<td><a href="index.html"><img id="logo_img" src="images/logo.jpg"></a></td>
+    				<td><h3 id="logo_words">专注本土传统炸鸡二十四年，始终如一</h3></td>
+    				<td><h3 id="logo_tel">加盟电话：400-888-8888</h3></td>
     			</tr>
     		</table>
     	</div>
+    	
         <div id="header_bar" class="inner">
-          <table style="text-align:center">
-          	<tr>
-          		<td><a href="introduction.html"><h3>品牌介绍</h3></a></td>
-          		<td><a href="dynamics.html"><h3>品牌动态</h3></a></td>
-          		<td><a href="show.html"><h3>产品展示</a></h3></td>
-          		<td><a href="join.html"><h3>加盟政策</a></h3></td>
-          		<td><a href="about.html"><h3>关于我们</a></h3></td>
-          		<td><a href="contact.html"><h3>联系我们</a></h3></td>
-          	</tr>
-          </table>
+        	<a class="introduction_link" href="introduction.html">品牌介绍</a>
+        	<a class="dynamics_link" href="dynamics.html">品牌动态</a>
+        	<a class="show_link" href="show.html">产品展示</a>
+        	<a class="join_link" href="join.html">加盟政策</a>
+        	<a class="about_link" href="about.html">关于我们</a>
+        	<a class="contact_link" href="contact.html">联系我们</a>
         </div>
 	</div>
 
@@ -83,10 +80,11 @@
 	<!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-		<h3>一个专注炸鸡二十四年的本土品牌</h3>
-		<h4>加盟电话：400-888-8888</h4>
-		<h4>网址：<a href="www.gongrenlu.com">www.gongrenlu.com</a></h4>
-		<h4>公司地址：郑州市二七区航海中路59号海为科技园A702C</h4>
+      	<img id="footer_logo" src="images/logo.jpg">
+		<p>一个专注炸鸡二十四年的本土品牌</p>
+		<p>加盟电话：400-888-8888</p>
+        <p>网址： <a href="www.gongrenlu.com">www.gongrenlu.com</a></p>
+        <p>公司地址：郑州市二七区航海中路59号海为科技园A702C</a></p>
       </footer>
     </div>
 
