--- a/about.html
+++ b/about.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<title>工人路炸鸡</title>
 </head>
 <body>
-	<div id="content">
+
+	<!-- HEADER -->   
+    <div id="header" class="outer">   		   		
+    	<p id="header_words">本土炸鸡知名品牌</p>
+    	<p id="header_tel">加盟电话：400-888-8888</p>
+    </div>
+    
+    <div id="logo_wrap" class="outer">
+    	<div id="header_logo" class="inner">
+    		<table>
+    			<tr>
+    				<td><a href="index.html"><img id="logo_img" src="images/logo.jpg"></a></td>
+    				<td><h3 id="logo_words">专注本土传统炸鸡二十四年，始终如一</h3></td>
+    				<td><h3 id="logo_tel">加盟电话：400-888-8888</h3></td>
+    			</tr>
+    		</table>
+    	</div>
+    	
+        <div id="header_bar" class="inner">
+        	<a class="introduction_link" href="introduction.html">品牌介绍</a>
+        	<a class="dynamics_link" href="dynamics.html">品牌动态</a>
+        	<a class="show_link" href="show.html">产品展示</a>
+        	<a class="join_link" href="join.html">加盟政策</a>
+        	<a class="about_link" href="about.html">关于我们</a>
+        	<a class="contact_link" href="contact.html">联系我们</a>
+        </div>
+	</div>
+	<!-- MAIN CONTENT -->
+	<div id="main_content_wrap" class="outer">
+	<div id="about_content" class="inner">
 		<table style="text-align:center">
 			<tr>
 				<td><p>关于我们:</p>
@@ -27,5 +57,16 @@
 		</table>
 		
 	</div>
+	</div>
+	<!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+      	<img id="footer_logo" src="images/logo.jpg">
+		<p>一个专注炸鸡二十四年的本土品牌</p>
+		<p>加盟电话：400-888-8888</p>
+        <p>网址： <a href="www.gongrenlu.com">www.gongrenlu.com</a></p>
+        <p>公司地址：郑州市二七区航海中路59号海为科技园A702C</a></p>
+      </footer>
+    </div>
 </body>
 </html>
