--- a/show.html
+++ b/show.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 	<title>工人路炸鸡</title>
 </head>
 <body>
@@ -35,20 +35,16 @@
 	</div>
 	<!-- MAIN CONTENT -->
 	<div id="main_content_wrap" class="outer">
-	<div id="contact_content" class="inner">
+	<div id="show_content" class="inner">
 		<table style="text-align:center">
-			<tr><th colspan="2"><h1>联系我们</h1></th></tr>
+			<tr><th colspan="2"><h1>产品展示</h1></th></tr>
 			<tr>
-				<td><img width=150px; height=150px; src="images/contact_1.jpg"></td>
-				<td><h2>TEL:400-888-8888</h2></td>
+				<td><img src="images/show_1.jpg"></td>
+				<td><img src="images/show_2.jpg"></td>
 			</tr>
 			<tr>
-				<td><img width=150px; height=150px; src="images/contact_2.jpg"></td>
-				<td><h2>ZZGRLZJ</h2></td>
-			</tr>
-			<tr>
-				<td><img width=150px; height=150px; src="images/contact_3.jpg"></td>
-				<td><h2>郑州市BRT B1路孙八寨站北侧，海为科技园A区702C</h2></td>
+				<td><img src="images/show_3.jpg"></td>
+				<td><img src="images/show_4.jpg"></td>
 			</tr>
 		</table>
 	</div>
@@ -63,6 +59,5 @@
         <p>公司地址：郑州市二七区航海中路59号海为科技园A702C</a></p>
       </footer>
     </div>
-
 </body>
 </html>
