--- a/introduction.html
+++ b/introduction.html
@@ -35,19 +35,13 @@
 	</div>
 	<!-- MAIN CONTENT -->
 	<div id="main_content_wrap" class="outer">
-	<div id="introduction_content" class="inner">
-		<table>
-			<tr>
-				<td><p>品牌介绍:</p>
-					<p>河南千鸿百悦餐饮管理有限公司是一家以品牌推广运营</p>
-					<p>为主要业务的餐饮连锁公司，旗下有多个品牌连锁运营。</p>
-					<p>公司旨在将本土没事品牌推广给更多人群，让更多爱好</p>
-					<p>美食之人能够享受到各种美食而努力前行。</p>
-				</td>
-			</tr>
-		</table>
-		
-	</div>
+		<div id="introduction_content" class="inner">
+			<p>品牌介绍:</p>
+			<p>河南千鸿百悦餐饮管理有限公司是一家以品牌推广运营</p>
+			<p>为主要业务的餐饮连锁公司，旗下有多个品牌连锁运营。</p>
+			<p>公司旨在将本土没事品牌推广给更多人群，让更多爱好</p>
+			<p>美食之人能够享受到各种美食而努力前行。</p>
+		</div>
 	</div>
 	<!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
