--- a/about.html
+++ b/about.html
@@ -36,17 +36,13 @@
 	<!-- MAIN CONTENT -->
 	<div id="main_content_wrap" class="outer">
 	<div id="about_content" class="inner">
-		<table style="text-align:center">
-			<tr>
-				<td><p>关于我们:</p>
-					<p>河南千鸿百悦餐饮管理有限公司是一家以品牌推广运营</p>
-					<p>为主要业务的餐饮连锁公司，旗下有多个品牌连锁运营。</p>
-					<p>公司旨在将本土没事品牌推广给更多人群，让更多爱好</p>
-					<p>美食之人能够享受到各种美食而努力前行。</p></td>
-			</tr>
-			<tr>				
-				<td><p>合作伙伴</p></td>
-			</tr>
+				<p>关于我们:</p>
+				<p>河南千鸿百悦餐饮管理有限公司是一家以品牌推广运营</p>
+				<p>为主要业务的餐饮连锁公司，旗下有多个品牌连锁运营。</p>
+				<p>公司旨在将本土没事品牌推广给更多人群，让更多爱好</p>
+				<p>美食之人能够享受到各种美食而努力前行。</p>			
+				<p>合作伙伴</p>
+		<table>	
 			<tr>
 				<td><img src="images/partner_1.jpg"></td>
 				<td><img src="images/partner_2.jpg"></td>
