--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     	<div id="header_logo" class="inner">
     		<table>
     			<tr>
-    				<td><a href="index.html"><img id="logo_img" src="images/logo.jpg"></a></td>
+    				<td><a href="index.html"><img id="logo_img" width=350px height=123px src="images/logo.jpg"></a></td>
     				<td><h3 id="logo_words">专注本土传统炸鸡二十四年，始终如一</h3></td>
     				<td><h3 id="logo_tel">加盟电话：400-888-8888</h3></td>
     			</tr>
@@ -80,7 +80,7 @@
 	<!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-      	<img id="footer_logo" src="images/logo.jpg">
+      	<img id="footer_logo"  width=350px height=123px src="images/logo.jpg">
 		<p>一个专注炸鸡二十四年的本土品牌</p>
 		<p>加盟电话：400-888-8888</p>
         <p>网址： <a href="www.gongrenlu.com">www.gongrenlu.com</a></p>
