--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 	<!-- HEADER -->   
     <div id="header" class="outer">   		   		
     	<p id="header_words">本土炸鸡知名品牌</p>
-    	<p id="header_tel">加盟电话：400-888-8888</p>
+    	<p id="header_tel">加盟电话：400-6096-899</p>
     </div>
     
     <div id="logo_wrap" class="outer">
@@ -40,7 +40,7 @@
 			<tr><th colspan="2"><h1>联系我们</h1></th></tr>
 			<tr>
 				<td><img width=150px; height=150px; src="images/contact_1.jpg"></td>
-				<td><h2>TEL:400-888-8888</h2></td>
+				<td><h2>TEL:400-6096-899</h2></td>
 			</tr>
 			<tr>
 				<td><img width=150px; height=150px; src="images/contact_2.jpg"></td>
@@ -48,7 +48,7 @@
 			</tr>
 			<tr>
 				<td><img width=150px; height=150px; src="images/contact_3.jpg"></td>
-				<td><h2>郑州市BRT B1路孙八寨站北侧，海为科技园A区702C</h2></td>
+				<td><h2>郑州市BRT B1路老代庄站北侧，海为科技园A区702C</h2></td>
 			</tr>
 		</table>
 	</div>
@@ -58,7 +58,7 @@
       <footer class="inner">
       	<img id="footer_logo" width=180px height=60px src="images/logo.jpg">
 		<p>一个专注炸鸡二十四年的本土品牌</p>
-		<p>加盟电话：400-888-8888</p>
+		<p>加盟电话：400-6096-899</p>
         <p>网址： <a href="www.gongrenlu.com">www.gongrenlu.com</a></p>
         <p>公司地址：郑州市二七区航海中路59号海为科技园A702C</a></p>
       </footer>
