--- a/dynamics.html
+++ b/dynamics.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" media="screen" width=180px height=60px href="stylesheets/stylesheet.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 	<title>工人路炸鸡</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
     	<div id="header_logo" class="inner">
     		<table>
     			<tr>
-    				<td><a href="index.html"><img id="logo_img" src="images/logo.jpg"></a></td>
+    				<td><a href="index.html"><img id="logo_img" width=180px height=60px src="images/logo.jpg"></a></td>
     				<td><h3 id="logo_words">专注本土传统炸鸡二十四年，始终如一</h3></td>
     				<td><h3 id="logo_tel">加盟电话：400-609-6899</h3></td>
     			</tr>
