--- a/introduction.html
+++ b/introduction.html
@@ -37,10 +37,14 @@
 	<div id="main_content_wrap" class="outer">
 		<div id="introduction_content" class="inner">
 			<p>品牌介绍:</p>
-			<p>河南千鸿百悦餐饮管理有限公司是一家以品牌推广运营</p>
-			<p>为主要业务的餐饮连锁公司，旗下有多个品牌连锁运营。</p>
-			<p>公司旨在将本土没事品牌推广给更多人群，让更多爱好</p>
-			<p>美食之人能够享受到各种美食而努力前行。</p>
+			<p>工人路炸鸡是由李先生在郑州市创立的炸鸡品牌，</p>
+			<p>店铺原设立在工人路上，因为秘制炸鸡口味绝佳，</p>
+			<p>被本地老饕广为传颂，得名工人路炸鸡。</p>
+			<p>工人路炸鸡自创立以来已经经营二十四年，</p>
+			<p>伴随着郑州的快速发展，也经历过搬迁，但依然</p>
+			<p>被许多人惦记着它独特的口感，工人路炸鸡也渐渐变成许多人记忆中炸鸡的味道。</p>
+			<p>工人路炸鸡品牌经历过这么多年的发展，已经成为</p>
+			<p>郑州本地知名的传统炸鸡品牌之一。</p>
 		</div>
 	</div>
 	<!-- FOOTER  -->
