--- a/introduction.html
+++ b/introduction.html
@@ -39,13 +39,13 @@
 			<p>品牌介绍:</p>
 			<p>工人路炸鸡是由李先生在郑州市创立的炸鸡品牌，</p>
 			<p>店铺原设立在工人路上，因为秘制炸鸡口味绝佳，</p>
-			<p>被本地老饕广为传颂，得名工人路炸鸡。</p>
+			<p>被本地老饕广为传颂，得名工人路炸鸡。&nbsp;&nbsp;&nbsp</p>
 			<p>工人路炸鸡自创立以来已经经营二十四年，伴随</p>
 			<p>着郑州的快速发展，也经历过搬迁，但依然被许</p>
 			<p>多人惦记着它独特的口感，工人路炸鸡也渐渐变</p>
 			<p>成许多人记忆中炸鸡的味道。工人路炸鸡品牌经</p>
 			<p>历过这么多年的发展，已经成为郑州本地知名的</p>
-			<p>传统炸鸡品牌之一。</p>
+			<p>传统炸鸡品牌之一。&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 		</div>
 	</div>
 	<!-- FOOTER  -->
